[tool.poetry]
name = "rplay-live-dl"
version = "2.0.0+vibe"
description = ""
authors = ["paver(kevinsun)"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
pydantic = "^2.10.4"
yt-dlp = "^2026.2.21"
python-dotenv = "^1.0.1"
requests = "^2.32.4"
apscheduler = "^3.11.0"
urllib3 = "^2.6.3"
colorlog = "^6.10.1"
pydantic-settings = "^2.12.0"
pathvalidate = "^3.3.1"
wcwidth = "^0.2.14"
tenacity = ">=8,<10"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
freezegun = "^1.5.5"
responses = "^0.25.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "models"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
